tests/invalid/bytearray_append_wrong_type/main.py
ba: bytearray = bytearray(b"hi")
ba.append(1.0)
